add_library(framework
    Def.h
    CornerStyle.h
    ObjectFactory.h
    Message.h
    MessageReceiver.cpp
    MessageListener.cpp
    Object.h
    Object.cpp
    Application.cpp
    Application.h
    RoundedRectangleShape.h
    RoundedRectangleShape.cpp
    WindowObject.h
    WindowObject.cpp
    Entity.cpp
    Entity.h
    QuadTree.cpp
    QuadTree.h
    Bitmask.cpp
    Bitmask.h
    Text.cpp
    Text.h
    TileMap.cpp
    TileMap.h
    TileMapImpl.cpp
    TileMapImpl.h
    Scene.cpp
    Scene.h
    QuadTreeScene.cpp
    QuadTreeScene.h
    NameHolder.cpp
    NameHolder.h
    Component.h
    Sprite.cpp
    Sprite.h
    SpritePool.h
    Switch.cpp
    Switch.h
    Animation.cpp
    Animation.h
    MovingSprite.cpp
    MovingSprite.h
    ShortestPathFinder.cpp
    ShortestPathFinder.h
    SpriteDeleter.h
    SpriteDeleter.cpp
    Director.cpp
    Director.h
    Util.h
    Widget/WidgetStyle.h
    Widget/WidgetStyle.cpp
    Widget/Widget.h
    Widget/Widget.cpp
    Widget/Desktop.h
    Widget/Desktop.cpp
    )
