add_library(framework
    Def.h
    Updater.h
    CornerStyle.h
    ObjectFactory.h
    Message.h
    MessageReceiver.cpp
    MessageListener.cpp
    StopWatch.h
    StopWatch.cpp
    Object.h
    Object.cpp
    Task.h
    Task.cpp
    Application.cpp
    Application.h
    RoundedRectangleShape.h
    RoundedRectangleShape.cpp
    FanShape.h
    FanShape.cpp
    WindowObject.h
    WindowObject.cpp
    Entity.cpp
    Entity.h
    QuadTree.cpp
    QuadTree.h
    Bitmask.cpp
    Bitmask.h
    Text.cpp
    Text.h
    TileMap.cpp
    TileMap.h
    TileMapImpl.cpp
    TileMapImpl.h
    Scene.cpp
    Scene.h
    QuadTreeScene.cpp
    QuadTreeScene.h
    NameHolder.cpp
    NameHolder.h
    Component.h
    Sprite.cpp
    Sprite.h
    SpritePool.h
    SpriteDecorator.h
    SpriteDecorator.cpp
    Switch.cpp
    Switch.h
    Animation.cpp
    Animation.h
    MovingSprite.cpp
    MovingSprite.h
    ShortestPathFinder.cpp
    ShortestPathFinder.h
    SpriteDeleter.h
    SpriteDeleter.cpp
    SpriteController.h
    SpriteController.cpp
    StateMachine.h
    StateMachine.cpp
    Director.cpp
    Director.h
    SoundManager.h
    SoundManager.cpp
    Util.h
    Widget/WidgetStyle.h
    Widget/WidgetStyle.cpp
    Widget/Widget.h
    Widget/Widget.cpp
    Widget/WidgetLayout.h
    Widget/WidgetLayout.cpp
    Widget/Desktop.h
    Widget/Desktop.cpp
    Widget/BoxLayout.h
    Widget/HBoxLayout.cpp
    Widget/VBoxLayout.cpp
    Widget/MouseArea.h
    Widget/MouseArea.cpp
    Widget/Label.h
    Widget/Label.cpp
    Widget/BasicButton.h
    Widget/BasicButton.cpp
    )
